# entsoe-py

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  Demo.ipynb  LICENSE  MANIFEST.in  README.md  deploy_to_pypi.sh  entsoe.py  manifest.in  mappings.py  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  result.csv  settings.py  setup.py  test.py  test_contracted_reserve.py  tests.py
.github/: ISSUE_TEMPLATE.md  labels.yaml  release-drafter.yml
.github/workflows/: ci.yaml  close-stale-issues.yml  codeql.yaml  linting.yaml  lock.yaml  publish-to-test-pypi.yml  release-drafter.yaml  release.yaml  run_all_tests.yaml  stale.yaml  sync-labels.yaml  tests.yaml  typing.yaml
entsoe/: __init__.py  decorators.py  entsoe.py  exceptions.py  mappings.py  misc.py  parsers.py  series_parsers.py  utils.py
entsoe/files/: __init__.py  decorators.py  entsoe_files.py
entsoe/geo/: README.MD  __init__.py  requirements.txt  utils.py
entsoe/geo/geojson/: AT.geojson  BE.geojson  BG.geojson  CH.geojson  CZ.geojson  DE_LU.geojson  DK_1.geojson  DK_2.geojson  EE.geojson  ES.geojson  FI.geojson  FR.geojson  GR.geojson  HR.geojson  HU.geojson  IT_CALA.geojson  IT_CNOR.geojson  IT_CNOR_2020.geojson  IT_CSUD.geojson  IT_CSUD_2020.geojson  IT_NORD.geojson  IT_SARD.geojson  IT_SICI.geojson  IT_SUD.geojson  IT_SUD_2020.geojson  LT.geojson  LV.geojson  NL.geojson  NO_1.geojson  NO_2.geojson  NO_3.geojson  NO_4.geojson  NO_5.geojson  PL.geojson  PT.geojson  RO.geojson  RS.geojson  SE_1.geojson  SE_2.geojson  SE_3.geojson  (+3 more)
requirements/: dev.txt
tests/: README.md  conftest.py  test_client.py  test_client_improved.py  test_clients.py  test_decorators.py  test_domains.py  test_exceptions.py  test_files.py  test_import.py  test_integration.py  test_integration_improved.py  test_mappings.py  test_misc.py  test_pandas.py  test_parsers.py  test_raw.py  test_rawclient.py  test_series_parsers.py  test_timezones.py  test_utils.py  test_working_suite.py
tests/fixtures/: a03_gaps.xml  crossborder_flows.xml  generation.xml  generation_mixed.xml  installed_capacity_per_plant.xml  loads.xml  prices.xml
